Fix navbar alignment and small-screen hamburger menu

--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,13 @@ button {
 /* Styles for Navbar */
 
 .navbar {
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem 2rem; */
   background-color: #0000ff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .logo {
@@ -76,9 +76,7 @@ button {
   list-style: none;
   display: flex;
   gap: 1rem;
-  /* justify-content: center;
-  padding: 0px; */
-  flex-wrap: wrap; 
+   flex-wrap: wrap; 
 }
 
 .nav-links a {
@@ -100,7 +98,6 @@ color: #00070e;
 max-width: 1280px;
 margin: 0px auto;
 width: 100%;
-/* background-color: magenta; */
 
 }
 
@@ -116,9 +113,8 @@ nav .main-wrapper{
           width: 100%;
           
 }
-.nav-navLinks{
-     display: flex
-;
+/* .nav-navLinks{
+     display: flex;
     gap: 2rem;
     padding-right: 2rem;
     list-style: none;
@@ -128,14 +124,15 @@ nav .main-wrapper{
     margin-top: 0px;
     margin-bottom: 0px;
 
-}
+} */
+
 /* main.main-wrapper{
   padding-top: 200px;
 } */
  @media (max-width: 768px) {
-  .nav-navLinks{
+  /* .nav-navLinks{
     gap: 0.5rem;
-  }
+  } */
 }
 
 .trf-thumb{
@@ -143,4 +140,25 @@ nav .main-wrapper{
   height: auto;   /* keep aspect ratio */
   border-radius: 8px;
   border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.carousel-control-prev-icon,  .carousel-control-next-icon{
+  
+    background-color: #0082f45e;
+    border-radius: 0.5em;
+}
+.carousel-indicators [data-bs-target] {
+      background-color: #0082f45e;
+}
+
+.nav-link.active  {
+font-weight: bold;
+color: #00070e;
+}
+
+.nav-link:hover {
+ /* background-color: #413f3b92; */
+  color: #fff; /* text changes to black */
+  text-decoration: underline;
 }
